Prepare release 2.0.0-alpha-23